Добавил к пакетам fullcalendar и dataTable

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,6 @@
 @import "vendor/normalize.scss";
 @import "vendor/swiper.scss";
+@import "vendor/dataTable.scss";
 @import "general/rem-calc";
 @import "general/variables.scss";
 @import "general/mixins.scss";
