--- a/src/pug/sections/_announcement.pug
+++ b/src/pug/sections/_announcement.pug
@@ -1,6 +1,6 @@
 section.announcement
-    .announcement__container
+    a(href="#").announcement__container
         .announcement__wrapper
             p.announcement__text
                 | ⚡️ Объявлен прием заявлений на заселение в общежития. Успей подать заявление в 
-                a(href="#") разделе услуг.
+                | разделе услуг.
