--- a/src/pug/sections/_advertisement-content.pug
+++ b/src/pug/sections/_advertisement-content.pug
@@ -8,40 +8,40 @@
             .swiper-button-next.advertisement-button-next
     .swiper-wrapper.advertisement__wrapper
         //- Slides
-        .swiper-slide
+        a(href='#').swiper-slide
             .block.block--wide
                 .block__content.block__content--main
                     h3.slider__item-title Студенческая весна. приглашаем на еженедельные онлайн-встречи!
                     p.slider__item-descr.slider__item-descr--wide Приглашаем Вас принять участие в презентациях и консультациях, а также в мастер-классах Российского государственного социального университета
-                    a(href="#").slider__item-link Подробнее
+                    span.slider__item-link Подробнее
                 .block__content--aside
                     p.slider__item-date 19
                         span Сентября
                     p.slider__item-state.slider__item-state--online Онлайн
-        .swiper-slide
+        a(href='#').swiper-slide
             .block.block--medium.block--hot
                 .block__content.block__content--main
                     h3.slider__item-title.slider__item-title--black Обновленные профессиональные стандарты в области социальной работы вступают в действие
-                    a(href="#").slider__item-link.slider__item-link--dark Подробнее
+                    span.slider__item-link.slider__item-link--dark Подробнее
                 .block__content--aside
                     p.slider__item-date.slider__item-date--dark 19
                         span Сентября
                     p.slider__item-state.slider__item-state--offline Офлайн
-        .swiper-slide
+        a(href='#').swiper-slide
             .block.block--narrow
                 .block__content.block__content--main
                     h3.slider__item-title.slider__item-title--black Магистр экономических наук из Ярославской области стал Лауреатом – победителем Всероссийского конкурса
-                    a(href="#").slider__item-link.slider__item-link--dark Подробнее
+                    span.slider__item-link.slider__item-link--dark Подробнее
                 .block__content--aside
                     p.slider__item-date.slider__item-date--dark
                         span
                     p.slider__item-state
-        .swiper-slide
+        a(href='#').swiper-slide
             .block.block--wide
                 .block__content.block__content--main
                     h3.slider__item-title Студенческая весна. приглашаем на еженедельные онлайн-встречи!
                     p.slider__item-descr.slider__item-descr--wide Приглашаем Вас принять участие в презентациях и консультациях, а также в мастер-классах Российского государственного социального университета
-                    a(href="#").slider__item-link Подробнее
+                    span.slider__item-link Подробнее
                 .block__content--aside
                     p.slider__item-date 19
                         span Сентября
