--- a/src/pug/sections/_news.pug
+++ b/src/pug/sections/_news.pug
@@ -2,7 +2,7 @@ section.news
     .news__container.container
         .news__slider.swiper-container
             .news__header
-                h2.news__titile(style="margin-right: 10px") Студенческие новости
+                h2.news__titile.title--large(style="margin-right: 10px") Студенческие новости
                 span.divider
                 .news__buttons.news__buttons--extra
                     .swiper-button-prev.news-button-prev
