--- a/src/scss/blocks/_about.scss
+++ b/src/scss/blocks/_about.scss
@@ -1,6 +1,7 @@
 .about__description {
-  padding-left: 19px;
-  padding-right: 20px;
-  margin-top: 0;
-  margin-bottom: 0;
+    padding-left: 19px;
+    padding-right: 20px;
+    margin-top: 0;
+    margin-bottom: 0;
+    line-height: rem-calc(23);
 }
