--- a/src/scss/blocks/_extra-info.scss
+++ b/src/scss/blocks/_extra-info.scss
@@ -5,7 +5,7 @@
 .extra-info__header {
     display: flex;
     align-items: center;
-    margin-bottom: 44px;
+    margin-bottom: 26px;
     @media (min-width: $tablet) {
         white-space: nowrap;
     }
@@ -50,7 +50,8 @@
 
 .extra-info__card {
     width: 100%;
-    max-height: 246px;
+    min-height: 246px;
+    height: 300px;
     overflow-y: hidden;
     @media (min-width: $tablet) {
         width: 430px;
