--- a/src/scss/blocks/_login.scss
+++ b/src/scss/blocks/_login.scss
@@ -11,9 +11,9 @@
 }
 
 .login__modal {
-    .modal__container {
-
-    }
+    background: $c-light;
+    border-radius: 4px;
+    box-shadow: 0px 5px 20px rgba(110, 119, 129, 0.1);
 }
 
 .login__navigation-list {
