--- a/src/scss/blocks/_parent-cabinet.scss
+++ b/src/scss/blocks/_parent-cabinet.scss
@@ -29,6 +29,8 @@
     background-color: $c-light;
     border-radius: 4px;
     padding: 0 24px;
+    padding-bottom: 1px;
+    margin-bottom: 12px;
 }
 
 .parent-cabinet__aside {
