--- a/src/scss/blocks/_portfolio-tabs.scss
+++ b/src/scss/blocks/_portfolio-tabs.scss
@@ -27,7 +27,7 @@
     font-size: 16px;
     line-height: 26px;
     text-transform: unset;
-
+    width: 145px;
     &--active {
         background: #3464e0;
         color: #ffffff;
